--- a/yugiohProGuide/src/app/deck-builder/deck-builder.page.scss
+++ b/yugiohProGuide/src/app/deck-builder/deck-builder.page.scss
@@ -13,7 +13,10 @@ h1{
   padding-bottom: 2%;
   padding-left: 4%;
 }
-
+#descargar{
+  text-decoration: none;
+  color: white;
+}
 .custom-file-upload {
   display: inline-block;
   padding: 6px 12px;
